@@ -6,7 +6,11 @@ File: redfit.R
 - Use slightly faster .rowSums() instead of rowSums()
 - Simplified arithmetic expressions in getdof(): no multiplying by 2
 - Precomputed squared numbers in getdof()
-- Small optimizations in redfitWinwgt()
+- Fixed Welch, Hanning, Triangular and Blackman-Harris windows to
+  be DFT-even
+- Computed more precise values for the 6 dB bandwidths of each window,
+  also for short windows.  Uniform sampling was assumed.
+- Two internal functions moved to top level, previously inside print.redfit()
 
 * CHANGES IN dplR VERSION 1.5.7
 
